Object selection outline in x-ray mode ignores geometry that's hidden in edit mode #74643

Closed
opened 2020-03-11 09:48:12 +01:00 by Stanislav Blinov · 7 comments

Blender Version
Broken: example: 2.81 up to d195deef5c
Worked: 2.80

Short description of error
Despite that geometry hidden in edit mode is visible in object mode, the selection outline only outlines geometry that's not hidden in edit mode when x-ray is turned on.

Exact steps for others to reproduce the error

  1. Load default scene
  2. Enter edit mode on the Cube and hide all but one face
  3. Switch to object mode and turn on x-ray

This makes the outline display confusing:
image.png

In the above image, one of the cubes has one face hidden, the other - split edges.

**Blender Version** Broken: example: 2.81 up to d195deef5cbfe2951dceb2a11959091fbd263440 Worked: 2.80 **Short description of error** Despite that geometry hidden in edit mode is visible in object mode, the selection outline only outlines geometry that's not hidden in edit mode when x-ray is turned on. **Exact steps for others to reproduce the error** 1. Load default scene 2. Enter edit mode on the Cube and hide all but one face 3. Switch to object mode and turn on x-ray This makes the outline display confusing: ![image.png](https://archive.blender.org/developer/F8402071/image.png) In the above image, one of the cubes has one face hidden, the other - split edges.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

@Jeroen-Bakker, @fclem: dont think this is intentional? [will confirm as bug for now, feel free to change to your liking...]

Can confirm. @Jeroen-Bakker, @fclem: dont think this is intentional? [will confirm as bug for now, feel free to change to your liking...]
Member

#74643.blend

Will investigate why this is happening. I think a different gpu batch is used.

[#74643.blend](https://archive.blender.org/developer/F8411875/T74643.blend) Will investigate why this is happening. I think a different gpu batch is used.
Jeroen Bakker self-assigned this 2020-03-17 11:05:32 +01:00

This issue was referenced by 4fc45c7a2b

This issue was referenced by 4fc45c7a2b75df1a0e07150c101b664e189550b7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74643
No description provided.